modules/networking.bicep
// Layer 1: Foundation - Networking
// No dependencies on other modules

@description('Location for all resources')
param location string
param tags object = {}
param namePrefix string
@description('Your Public IP address to allow RDP/SSH access')
param myIP string

var vnetName = '${namePrefix}-vnet'
var subnetName = '${namePrefix}-subnet'
var nsgName = '${namePrefix}-nsg'
var pipName = '${namePrefix}-pip'
var linuxPipName = '${namePrefix}-linux-pip'

resource nsg 'Microsoft.Network/networkSecurityGroups@2023-11-01' = {
  name: nsgName
  location: location
  tags: tags
  properties: {
    securityRules: [
      {
        name: 'AllowRDP'
        properties: {
          priority: 1000
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: myIP
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '3389'
        }
      }
      {
        name: 'AllowSSH'
        properties: {
          priority: 1010
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: myIP
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '22'
        }
      }
    ]
  }
}

resource vnet 'Microsoft.Network/virtualNetworks@2023-11-01' = {
  name: vnetName
  location: location
  tags: tags
  properties: {
    addressSpace: {
      addressPrefixes: [
        '10.0.0.0/16'
      ]
    }
    subnets: [
      {
        name: subnetName
        properties: {
          addressPrefix: '10.0.0.0/24'
          networkSecurityGroup: {
            id: nsg.id
          }
        }
      }
    ]
  }
}

resource pip 'Microsoft.Network/publicIPAddresses@2023-11-01' = {
  name: pipName
  location: location
  tags: tags
  sku: {
    name: 'Standard'
  }
  properties: {
    publicIPAllocationMethod: 'Static'
  }
}

resource linuxPip 'Microsoft.Network/publicIPAddresses@2023-11-01' = {
  name: linuxPipName
  location: location
  tags: tags
  sku: {
    name: 'Standard'
  }
  properties: {
    publicIPAllocationMethod: 'Static'
  }
}

output subnetId string = '${vnet.id}/subnets/${subnetName}'
output publicIpId string = pip.id
output publicIpAddress string = pip.properties.ipAddress
output linuxPublicIpId string = linuxPip.id
output linuxPublicIpAddress string = linuxPip.properties.ipAddress
output vnetId string = vnet.id
output vnetName string = vnet.name
output vnetResourceId string = vnet.id
output nsgId string = nsg.id
output nsgName string = nsg.name
